src/objects/Potential_New_Business__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SCP Potential New Business</relationshipLabel>
        <relationshipName>GAP_Potential_New_Business</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comentarios</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_to_approach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto a Desarrollar</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SCP Potential New Business</relationshipLabel>
        <relationshipName>GAP_Potential_New_Business</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_FCV__c</fullName>
        <label>FCV Estimado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_new_Business__c</fullName>
        <label>Descripción</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SCP Potential New Business</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>GAP Potential New Business Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCP Potential New Business</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>